# python-cicd

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/unit/: test_version.py
