[project]
name = "myapp-project"
dynamic = ["version"]
description = "A simple Python project with UV, Docker, GitHub Actions"
authors = [{ name = "Simon Steinberg", email = "dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.6"
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.12",
    "pytest==8.3.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/myapp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]
